initial version of pipe-delimited ASTM message to HAPI runtime object